[gd_scene load_steps=12 format=2]

[ext_resource path="res://scripts/letter-helper.gd" type="Script" id=1]
[ext_resource path="res://audio/Hit_Hurt.wav" type="AudioStream" id=2]
[ext_resource path="res://Mouse.gd" type="Script" id=3]
[ext_resource path="res://Area2D.gd" type="Script" id=4]
[ext_resource path="res://MousePush1.png" type="Texture" id=5]
[ext_resource path="res://MousePush2.png" type="Texture" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 512, 10 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 10, 300 )

[sub_resource type="CircleShape2D" id=3]
radius = 30.0

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 532, 310 )

[sub_resource type="CircleShape2D" id=5]
radius = 1.0

[node name="Main" type="Node2D"]

[node name="letters" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="LetterSpawner" type="Node2D" parent="letters"]
position = Vector2( 0, 40 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 512, 610 )
shape = SubResource( 1 )

[node name="CollisionShape2D2" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( -10, 300 )
shape = SubResource( 2 )

[node name="CollisionShape2D3" type="CollisionShape2D" parent="StaticBody2D"]
position = Vector2( 1034, 300 )
shape = SubResource( 2 )

[node name="CollideSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
volume_db = -4.0

[node name="Mouse" type="KinematicBody2D" parent="."]
collision_layer = 4
script = ExtResource( 3 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Mouse"]
shape = SubResource( 3 )
disabled = true

[node name="Gray" type="Sprite" parent="Mouse"]
self_modulate = Color( 1, 1, 1, 0.784314 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 5 )

[node name="Green" type="Sprite" parent="Mouse"]
visible = false
self_modulate = Color( 1, 1, 1, 0.784314 )
scale = Vector2( 0.75, 0.75 )
texture = ExtResource( 6 )

[node name="Area2D" type="Area2D" parent="."]
gravity = 0.0
monitorable = false
collision_layer = 8
script = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 512, 310 )
shape = SubResource( 4 )

[node name="StableFall" type="Timer" parent="."]
wait_time = 5.0

[node name="RigidBody2D" type="RigidBody2D" parent="."]
collision_layer = 32
collision_mask = 10
mode = 1
contact_monitor = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource( 5 )
disabled = true

[node name="RemoteTransform2D" type="RemoteTransform2D" parent="RigidBody2D"]
remote_path = NodePath("../../letters")

[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
[connection signal="timeout" from="StableFall" to="letters" method="_on_StableFall_timeout"]
